Fix color contrast function (#1158)
* fix color contrast function

* changelog

--- a/src/global_styling/functions/_colors.scss
+++ b/src/global_styling/functions/_colors.scss
@@ -91,7 +91,7 @@
 
   @while ($contrast < 4.5) {
     $highContrastTextColor: shadeOrTint($highContrastTextColor, 5%, 5%);
-    $contrast: contrastRatio($highContrastTextColor, $euiColorEmptyShade);
+    $contrast: contrastRatio($highContrastTextColor, $background);
   }
 
   @return $highContrastTextColor;
